--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -11,10 +11,17 @@
         android:layout_weight = "1"/>
 
     <ImageView
-        android:id="@+id/iv_action_bar"
+        android:id="@+id/iv_search"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_weight = "0"
         android:src="@drawable/magnifier"/>
+
+    <ImageView
+        android:id="@+id/iv_confirm"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_weight = "0"
+        android:src="@drawable/confirm"/>
 
 </LinearLayout>
