--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -8,18 +8,6 @@
     android:layout_height="match_parent"
     tools:context="be.helha.projet.activity.MenuActivity">
 
-    <Button
-        android:id="@+id/btn_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="rechercher"/>
-
-    <Spinner
-        android:id="@+id/spin_type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:drawable/btn_dropdown"
-        android:spinnerMode="dropdown"/>
 
     <TextView
         android:id="@+id/tv_movie_title"
@@ -41,6 +29,18 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_main_listTVSeries"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/tv_actor_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Actor"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_main_listActor"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
