--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="be.helha.projet.activity.MenuActivity">
 
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center|left"
+        android:orientation="vertical" >
     <TextView
         android:id="@+id/tv_movie_title"
         android:layout_width="match_parent"
@@ -17,9 +20,9 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_main_listMovie"
-        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:scrollbars="none" />
 
     <TextView
         android:id="@+id/tv_tvSeries_title"
@@ -27,13 +30,13 @@
         android:layout_height="wrap_content"
         android:text="TV Series"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_main_listTVSeries"
-        android:scrollbars="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_main_listTVSeries"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="none"/>
 
-    <TextView
+        <TextView
         android:id="@+id/tv_actor_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,10 +44,10 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_main_listActor"
-        android:scrollbars="vertical"
+        android:scrollbars="none"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    </LinearLayout>
 
-
-</LinearLayout>
+</ScrollView>
