--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content"
             style="@style/TextAppearance.AppCompat.Subhead"
             android:layout_marginBottom="10dp"
-            android:gravity="center"/>
+            android:gravity="left"/>
 
 
         <ImageView
